# longshot

./: .gitignore  Cargo.toml  Dockerfile  README.md
decompiled/: EcamManager.java  EcamManager2.java  EcamService.java  EcamServiceV2.java  MonitorDataV2.java
doc/: README.tpl  brew.yml
examples/: bt_emulate.rs  bt_scan.rs
src/: Info.plist  command.rs  display.rs  ecam.rs  ecam_bt.rs  ecam_subprocess.rs  lib.rs  logging.rs  main.rs  packet.rs  packet_stream.rs  prelude.rs  util.rs
src/ecam/: driver.rs  ecam.rs  ecam_bt.rs  ecam_simulate.rs  ecam_subprocess.rs  ecam_wrapper.rs  hardware_enums.rs  machine_enum.rs  mod.rs  packet_receiver.rs  packet_stream.rs  stdin_stream.rs
src/operations/: brew.rs  ingredients.rs  mod.rs  monitor.rs  parameter.rs  power.rs  recipe_list.rs
src/protocol/: command.rs  hardware_enums.rs  machine_enum.rs  mod.rs  packet.rs
src/protocol/request/: app_control.rs  mod.rs  monitor.rs  profile.rs  recipe.rs
