[package]
name = "longshot"
version = "0.1.8"
authors = ["Matt Mastracci <matthew@mastracci.com>"]
edition = "2021"
description = "API and CLI for ECAM-based Delonghi machines"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/mmastrac/longshot"
readme = "README.md"

[dependencies]
btleplug = "0.11.5"
embed_plist = "1"
tokio = { version = "1.25", features = ["io-std", "io-util", "macros", "rt", "rt-multi-thread", "process"] }
tokio-stream = { version = "0.1", features = ["sync", "io-util"] }
pretty_env_logger = "0.5"
uuid = "1.3.0"
hex = "0.4"
thiserror = "1.0"
clap = { version = "4.1", features = ["cargo", "derive", "string"] }
async-stream = "0.3"
stream-cancel = "0.8"
tuples = "1.7"
futures = "0.3"
num_enum = "0.7"
colored = "2"
itertools = "0.12"
# This may take some work to upgrade
ariadne = "=0.1.5"
crc = "3.0"
serde = "1.0"
serde_json = "1.0"
keepcalm = { version = "0.3", features = ["serde", "global_experimental"] }

[dev_dependencies]
rstest = "0"
const-decoder = "0"

[lib]
name = "longshot"
path = "src/lib.rs"

[[bin]]
name = "longshot"
path = "src/main.rs"

[[example]]
name = "bt_scan"
path = "examples/bt_scan.rs"
