[package]
name = "longshot"
version = "0.1.13"
authors = ["Matt Mastracci <matthew@mastracci.com>"]
edition = "2024"
description = "API and CLI for ECAM-based Delonghi machines"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/mmastrac/longshot"
readme = "README.md"

[dependencies]
btleplug = "0.11.8"
embed_plist = "1"
tokio = { version = "1.45", features = ["io-std", "io-util", "macros", "rt", "rt-multi-thread", "process"] }
tokio-stream = { version = "0.1", features = ["sync", "io-util"] }
pretty_env_logger = "0.5"
uuid = "1.16"
hex = "0.4"
thiserror = "2"
clap = { version = "4.5", features = ["cargo", "derive", "string"] }
async-stream = "0.3"
stream-cancel = "0.8"
tuples = "1"
futures = "0.3"
num_enum = "0.7"
colored = "3"
# This may take some work to upgrade
ariadne = "=0.1.5"
crc = "3.3"
serde = "1"
keepcalm = { version = "0.3", features = ["serde", "global_experimental"] }

[dev-dependencies]
rstest = "0.25.0"
const-decoder = "0"
itertools = "0.14"

[lib]
name = "longshot"
path = "src/lib.rs"

[[bin]]
name = "longshot"
path = "src/main.rs"

[[example]]
name = "bt_scan"
path = "examples/bt_scan.rs"
